2008-04-07  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Next step toward supporting re-entrant evaluation: Moved register file
        maintenance code into a proper "RegisterFile" class.
        
        There's a subtle change to the register file's internal layout: for
        global code / the global object, registerOffset is always 0 now. In
        other words, all register counting starts at 0, not 0 + (number of
        global variables). The helps simplify accounting when the number of
        global variables changes.

2008-04-07  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff.

        Bug 18338: Support exceptions in SquirrelFish <http://bugs.webkit.org/show_bug.cgi?id=18338>
        
        Initial support for exceptions in SquirrelFish, only supports finalisers in the
        simple cases (eg. exceptions and non-goto/return across finaliser boundaries).
        This doesn't add the required exception checks to existing code, it merely adds
        support for throw, catch, and the required stack unwinding.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        (KJS::CodeBlock::getHandlerForVPC):
        * VM/CodeBlock.h:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitCatch):
        (KJS::CodeGenerator::emitThrow):
        * VM/CodeGenerator.h:
        * VM/JSPropertyNameIterator.cpp:
        (KJS::JSPropertyNameIterator::create):
        * VM/Machine.cpp:
        (KJS::prepareException):
        (KJS::Machine::unwindCallFrame):
        (KJS::Machine::throwException):
        (KJS::Machine::privateExecute):
        * VM/Machine.h:
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::ThrowNode::emitCode):
        (KJS::TryNode::emitCode):
        * kjs/nodes.h:
        * kjs/scope_chain.cpp:
        (KJS::ScopeChain::depth):
        * kjs/scope_chain.h:

2008-04-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        